# CppProjectBuilder

./: CMakeLists.txt  README.md
source/: ProjectGenerator.cpp  ProjectGenerator.h  main.cpp
templates/: CMakeLists.txt.template  gitignore.template  main.cpp.template
